refactor: a volume was included at docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
       MONGO_INITDB_DATABASE: mydatabase
+    volumes:
+      - ./data:/data/db
+
+volumes:
+  mongo-data:
